fixed colours on bricksmasher/alignment

--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,7 @@ h3 a{
 }
 
 canvas {
+	padding-top: 100px;
 	padding-left: 0;
     padding-right: 0;
     margin: 0 auto;
